# DOCKER-DJANGO-POSTGRES-ESQUELETO

./: .env  .gitignore  Dockerfile  READ.md  docker-compose.yml  pyproject.toml  tutorial.txt
app/: wait_for_psql.sh
app/app/: settings.py
nginx/: nginx.conf
