[tool.poetry]
name = "esqueleto-django"
version = "0.1.0"
description = ""
authors = ["Isaque Felizardo <isaquefer@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.3"
django-admin = "^2.0.1"
psycopg2 = "^2.8.6"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
